<resources>
    <string name="app_name">小程序自动发单</string>
    <string name="app_name_software">时时彩助手软件</string>
    <string name="realtime_color">时时彩</string>
    <string name="other">其他</string>
    <string name="home">主页</string>
    <string name="message">视频</string>
    <string name="discovery">走势</string>
    <string name="trend_chart">走势图表</string>
    <string name="my">我的</string>
    <string name="toolkit">工具</string>
    <string name="rights">\@2015-2018 All Rights Reserved</string>
    <string name="input_user_name">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_login">用户登录</string>
    <string name="video_rt_upload">视频实时上传</string>
    <string name="video_rt_monitor">视频实时监控</string>
    <string name="photo_capture_upload">拍照上传</string>
    <string name="photo_rt_monitor">图片实时监控</string>
    <string name="main_menu">主菜单</string>
    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="video">Video Settings</string>
    <string name="save">OK</string>
    <string name="username">Username</string>
    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">测试</string>
    <string name="user_list">用户列表</string>
    <string name="input_video_frame_rate">输入视频采样率</string>
    <string name="input_video_bitrate">输入视频比特率</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="input_server_ip">输入服务器IP</string>
    <string name="off">关闭</string>
    <string name="server_config">请配置服务器</string>
    <string name="video_config">请配置视频参数</string>
    <string name="input_all">请填写完整</string>
    <string name="input_mail">输入邮箱</string>
    <string name="input_nickname">输入昵称</string>
    <string name="one_key_register">一键注册</string>
    <string name="user_register">用户注册</string>
    <string name="register_succ">注册成功</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_not_same">两次输入的密码不一致</string>
    <string name="enter_wechat_nickname">输入微信昵称</string>
    <string name="enter_wechat_recommand_code">输入推荐码</string>
    <string name="enter_recommend_phone_num">输入推荐人手机号</string>
    <string name="photo_view">图片浏览</string>
    <string name="data_change">资料修改</string>
    <string name="user_name_change">用户名修改</string>
    <string name="nick_name_change">昵称修改</string>
    <string name="mail_change">邮箱修改</string>
    <string name="online_users">在线用户</string>
    <string name="chart_trend">开奖</string>
    <string name="regular_analysis">走势</string>
    <string name="popular_information">资讯</string>
    <string name="my_info">我的</string>
    <string name="click_login">点击登录</string>
    <string name="message_center">消息中心</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="about_we">关于我们</string>
    <string name="register_failed">注册失败，请检查网络</string>
    <string name="account_exist">账号已经存在</string>
    <string name="login_failed">登录失败</string>
    <string name="login_succ">登录成功</string>
    <string name="suggestion_succ">反馈成功</string>
    <string name="suggestion_failed">反馈失败</string>
    <string name="current_color">当前彩种:</string>
    <string name="phone_area">号码归属</string>
    <string name="area_code_search">区号查询</string>
    <string name="train_search">火车查询</string>
    <string name="weather_search">天气预报</string>
    <string name="exchange_search">汇率查询</string>
    <string name="input_phone_code">输入手机号码</string>
    <string name="one_key_search">一键查询</string>
    <string name="enter_phone_code_tip">请输入手机号</string>
    <string name="phone_code_error">手机号不正确</string>
    <string name="enter_code">输入区号</string>
    <string name="enter_city">输入地址</string>
    <string name="enter_code_tip">请输入区号</string>
    <string name="enter_city_tip">请输入城市</string>
    <string name="unknow_area">未知地区</string>
    <string name="unknow_code">未知区号</string>
    <string name="enter_city_name">输入城市</string>
    <string name="unknow_weather">天气未知</string>
    <string name="before_change">转换前:</string>
    <string name="later_change">转换后:</string>
    <string name="input_before_amount">输入转换前的数量</string>
    <string name="one_key_change">一键转换</string>
    <string name="enter_amount_tip">请输入数量</string>
    <string name="exchange_error">转换失败</string>
    <string name="enter_train">输入车次</string>
    <string name="enter_train_tip">请输入车次</string>
    <string name="trainno_error">未知车次</string>
    <string name="color_info">彩讯</string>
    <string name="more">\></string>
    <string name="forcaest">预测</string>
    <string name="trend_any">走势分析</string>
    <string name="open_lotty">开奖</string>
    <string name="forecast">预测</string>
    <string name="lotty_forecast">彩票预测</string>
    <string name="join_method">玩法</string>
    <string name="ohter">其他</string>
    <string name="newst_lotty_open">最新彩票开奖</string>
    <string name="join_method_introduce">玩法介绍</string>
    <string name="upload_wechat_screenshot">上传微信截图</string>
    <string name="send_code">发送验证码</string>
    <string name="enter_vaild_code">输入验证码</string>
    <string name="notifiaction">通知</string>
    <string name="setting">设置</string>
    <string name="start_auto_click">自动启停</string>
    <string name="system_setting">系统设置</string>
    <string name="start_calibration">开始校准</string>
    <string name="seek_position">定位坐标</string>
    <string name="accessibility_tip">开启辅助功能Sample</string>
    <string name="accessibility_desc">开启辅助功能，让你的手机更智能一点</string>
    <string name="net_err">网络错误</string>
    <string name="account_disable">账户被禁用</string>
    <string name="sel_photo_failed">选取图片失败</string>
    <string name="forget_passwd">忘记密码？</string>
    <string name="forget_passwd_title">忘记密码</string>
    <string name="next_step">下一步</string>
    <string name="code_send_photo_tip">验证码已发送至您的手机</string>
    <string name="enter_new_password">输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="send_code_failed">发送验证码失败</string>
    <string name="check_code_failed">验证码错误</string>
    <string name="password_change">密码修改</string>
    <string name="phone_num">手机号:</string>
    <string name="password_change_succ">密码修改成功</string>
    <string name="password_change_failed">密码修改失败</string>
    <string name="my_money">我的赏金</string>
    <string name="request_money">申请提现</string>
    <string name="app_exception">程序异常</string>
    <string name="litte_money">赏金太少，无法提现</string>
    <string name="enter_ailipay_account">输入支付宝账号</string>
    <string name="enter_request_money">输入提现金额</string>
    <string name="onekey_request_money">一键提取</string>
    <string name="request_money_success">提现申请成功</string>
    <string name="request_money_failed">提现申请失败</string>
    <string name="system_notification">系统通知</string>
    <string name="get_notifaction_failed">获取通知失败</string>
    <string name="no_notifaction">无通知消息</string>
    <string name="recommend_list">推荐列表</string>
    <string name="no_recommend_user">无推荐用户</string>
    <string name="get_recommend_list_failed">获取推荐列表失败</string>
    <string name="sel_phone">获取推荐列表失败</string>
    <string name="upload_wechat_photo_tip">请上传微信截图</string>
    <string name="min_window">窗口最小</string>
    <string name="sending_group_num">发单群数</string>
    <string name="enter_send_group_num">输入发单群数</string>
    <string name="sending_tween">发单间隔</string>
    <string name="sending_tween_minute">发单间隔(分钟)</string>
    <string name="enter_sending_tween">输入发单间隔(分钟)</string>
    <string name="auto_start_stop">自动启停</string>
    <string name="enter_start_time">输入开始时间</string>
    <string name="enter_stop_time">输入结束时间</string>
    <string name="endtime_must_large_starttime">结束时间必须大于开始时间</string>
    <string name="setting_success">设置成功</string>
    <string name="suggestion_reply">意见回复</string>
    <string name="no_suggestion_reply">暂无意见回复</string>
    <string name="get_suggestion_reply_failed">获取意见回复失败</string>
    <string name="hello_tip">问候语</string>
    <string name="enter_hello_tip">输入问候语</string>
    <string name="enter_hello_time">输入问候时间</string>
    <string name="upload_log">上传日志</string>
    <string name="no_upload_log">日志文件不存在</string>
    <string name="log_upload_succ">日志上传成功</string>
    <string name="log_upload_failed">日志上传失败</string>
    <string name="no_log_file">日志文件不存在</string>
    <string name="log_upload">日志上传</string>
    <string name="system">系统</string>
    <string name="recommand">推荐</string>
    <string name="start_share">开始转发</string>
    <string name="stop_share">停止转发</string>
    <string name="no_vaild_account">账户审核不通过</string>
    <string name="check_version_failed">版本检查失败</string>
    <string name="curr_newest_version">当前已是最新版本</string>
</resources>
