<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_phone_num"
                style="@style/common_edit"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:inputType="phone"
                android:hint="@string/input_user_name"/>

            <Button
                android:id="@+id/btn_send_code"
                style="@style/common_btn"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/send_code"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_code"
            style="@style/common_edit"
            android:layout_width="match_parent"
            android:hint="@string/enter_vaild_code"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_next_step"
            style="@style/common_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_step" />
    </LinearLayout>
</RelativeLayout>