<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_ailipay_account"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/enter_ailipay_account"
        android:inputType="text" />


    <EditText
        android:id="@+id/edit_request_money"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/enter_request_money"
        android:inputType="numberDecimal"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_onekey_request"
        style="@style/common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onekey_request_money" />

</LinearLayout>