<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/text_forget_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/phone_num"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/pre_production_blue"
            android:paddingLeft="10dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/edit_password"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/edit_confirm_password"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_confirm_change"
        style="@style/common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_change" />

</LinearLayout>