<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/floating_view"
    android:background="@android:color/transparent">
    <LinearLayout
        android:id="@+id/layout_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/yellow">
        <Button
            android:id="@+id/btn_start_calibratio"
            style="@style/common_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_calibration"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btn_setting"
            style="@style/common_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/system_setting"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/main_item_test_stop"
            style="@style/common_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_share"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_seek_position"
            style="@style/common_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/seek_position"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_min_window"
            style="@style/common_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/min_window"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>