<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_user_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/pm_common"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/edt_user_name"
            style="@style/common_edit"
            android:layout_width="match_parent"
            android:hint="@string/input_user_name" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/common_edit"
            android:layout_width="match_parent"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/common_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>
</ScrollView>
