<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edt_code"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/enter_code"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_area_search"
        style="@style/common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_key_search" />

    <TextView
        android:id="@+id/text_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edt_area"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/enter_city"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_code_search"
        style="@style/common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_key_search" />

    <TextView
        android:id="@+id/text_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>