<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/before_change"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_before_change"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:text="@string/later_change"
            android:gravity="center_vertical" />
        <Spinner
            android:id="@+id/spinner_later_change"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_amount"
        style="@style/common_edit"
        android:layout_width="match_parent"
        android:hint="@string/input_before_amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_search"
        style="@style/common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_key_search" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_res"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </ScrollView>
</LinearLayout>